# lphash

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql.yml
data/unitigs_stitched/: test.fa
debug_build/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: BooPHF.hpp  build.hpp  build_configuration.hpp  compile_constants.tpd  constants.hpp  ef_sequence.hpp  ef_sequence_inmemory.hpp  external_memory_vector.hpp  minimizer.hpp  minimizer_switch.hpp  mm_context.hpp  mphf.hpp  mphf_utils.hpp  parser_build.hpp  partitioned_mphf.hpp  ptbb_file_itr.hpp  quartet_wtree.hpp  query.hpp  rs_bit_vector.hpp  sorted_external_vector.hpp  unpartitioned_mphf.hpp  util.hpp
lib/include/: constants.hpp  ef_sequence.hpp  external_memory_vector.hpp  mphf.hpp  partitioned_mphf.hpp  rs_bit_vector.hpp  unpartitioned_mphf.hpp  util.hpp
lib/src/: constants.cpp  mphf.cpp  partitioned_mphf.cpp  quartet_wtree.cpp  unpartitioned_mphf.cpp
main/include/: build.hpp  constants.hpp  parser_build.hpp  query.hpp
main/ptbb/: ptbb.hpp  ptbb_build.cpp  ptbb_query.cpp
main/src/: build.cpp  lphash.cpp  parser_build.cpp  query.cpp
scripts/: better_experiments.sh  building_time.sh  download_test_datasets.sh  experiments.sh  old experiments (do not use).sh  zenodo_upload.sh
src/: build.cpp  build_alt.cpp  build_configuration.cpp  constants.cpp  lphash.cpp  minimizer.cpp  minimizer.hpp  mphf.cpp  mphf_utils.cpp  parser_build.cpp  parser_config.hpp  parser_query.cpp  partitioned_mphf.cpp  ptbb_build.cpp  ptbb_file_itr.cpp  ptbb_query.cpp  quartet_wtree.cpp  query.cpp  query_alt.cpp  test_ptbb_file_iterator.cpp  test_sev.cpp  unpartitioned_mphf.cpp
src/ptbb/: ptbb.hpp  ptbb_build.cpp  ptbb_query.cpp  sichash_build_query.cpp
tests/: test_ptbb_file_iterator.cpp  test_sev.cpp
